# amherst

./: .gitignore  README.md  amherst_fastui_app.spec  example_am.env  example_pf.env  local_pyproject.toml  prek.toml  pyproject.toml  pyproject_am_dev.toml  shipper.spec  shipper_bak.spec
.run/: CLI.run.xml  SHIPPER LIVE DEV.run.xml  SHIPPER LIVE.run.xml  SHIPPER SANDBOX.run.xml
bench/: am_record.py  backend_funcs.py  backend_search_paginate2.py  commence_adaptorsv1.py  converters.py  maps2.py  ship_funcs.py  ship_queries.py  shipper_desktop.py  sql.py
deploy/: all_reqs_hm.txt  all_reqs_office.txt  all_reqs_prod.txt  amherst_fastui_desktop.spec  amherst_shipper_BETA.bat  amherst_shipper_BETA_LIVE.bat  amherst_shipper_BETA_hm.bat  browser_sync.py  doc_reqs.txt  example_env_AM_ENV.txt  example_env_SHIP_ENV.txt  git_reqs.txt  local_reqs.txt  local_reqs_hm.txt  local_reqs_office.txt  normal_reqs.txt  shipper.spec
deploy/install/: paul-progs.py  paul-progs_py-runner.bat
deploy/progs/: paul_progs.bat  paul_progs.ps1
deploy/reqs/: all_reqs_office.txt  all_reqs_prod.txt  dev_reqs.txt  git_reqs.txt  local_reqs_hm.txt  local_reqs_office.txt  normal_reqs.txt
deploy/scripts/: amherst.app  amherst_shipper.bat  amherst_shipper1.bat  amherst_shipper_live.bat  amherst_shipper_office.bat  amherst_shipper_office_dev.bat
docs/: index.md
docs/docs_ship/: conf.py  front.rst  index.rst  models.rst  shipper.rst
docs/shipper/: conf.py
docs/source/: conf.py
docs_imported/Instructions/: Hire radios & Batteries Marking Instructions.doc  Kirisun-PT558-PT4200-PTT-Assembly-Instructions-doc.doc
docs_imported/entel/: Entel DX485 User Crib Sheet Simple Guide.docx  entel-dx482-fact-sheet.doc  entel-dx485-fact-sheet.doc
docs_imported/ex/: index.md
docs_ship/: index.rst
legacy/: app_file_jin.py  jin_route.py  script.py
legacy/routers/: __init__.py  server_load.py  shipping_page.py  shipping_route.py  shipping_route1.py
legacy/templates/: main.html
reqs/: local_reqs.txt  local_reqs_office.txt  requirements.txt
resources/brother label/: label.lbx
scripts/: _copy_envs.bat  _install_git_uv.bat  beta.bat  convert_tracking.bat  email_file.bat  fastam.bat  install_a6_label_printer.bat  install_shipper.bat  invoice_num.bat  invoice_num_uv.bat  payment_status.bat  print_file.bat  shipper.bat  shipper_uv.bat  shipper_v3.bat  update_run_amherst.bat  wiki.bat
scripts/install/: clone_or_pull_amherst_repo.bat  clone_or_pull_amherstpr_repo.bat  copy_envs.bat  install_all.bat  install_amherst.bat  install_amherst_all.bat  install_amherst_envs.bat  install_amherst_envs1.bat  install_amherst_local.bat  install_amherst_runner.bat  (+13 more)
tests/: client.py  conftest.py  fixtures_live.py  fixtures_mock.py  heavy.py  html_endpoints.http  json_endpoints.http  monkey.py  pycmc_test.py  test_2.py  test_24_raw.py  test_24_safe.py  test_api.py  test_app.py  test_basic.py  test_bork.py  test_client.py  test_cmc.py  test_cmc_raw.py  test_cmc_safe.py  test_commence_shipment.py  test_config.py  test_date.py  test_dynamic.py  test_el.py  test_everything.py  test_fastui.py  test_filter_logic.py  test_forms.py  test_integrate.py  test_integrate2.py  test_jinja.py  test_monkey.py  test_new_cmc.py  test_new_enum.py  test_new_hierarchy.py  test_phone.py  test_postcode_utils.py  test_pycommence.py  test_pycommence_live.py  (+11 more)
tests_v1/: conftest.py  conftest_sql.py  fixtures_mock.py  html_endpoints.http  pycmc_test.py  test_api.py  test_jinja.py  test_routes.py  test_simple.py  test_stockcheck.py
(+577 files in other folders)
