[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[project]
name = "amherst"
version = "0.4.35"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paw", email = "amherst+pawrequest@users.noreply.github.com" }
]
requires-python = ">= 3.13"

dependencies = [
    "shipaw==0.3.72",
    "pawlogger==0.1.4",
    "pycommence==0.2.4",
    #
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "flaskwebgui>=1.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]


[project.scripts]
shipper = "amherst.cli:shipper_cli"

[tool.ruff]
line-length = 120
lint.extend-select = ["RUF100", "UP","I"]
format.quote-style = "single"



#[tool.uv.sources]
#shipaw = { path = '../shipaw', editable = true }
