[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"


[project]
name = "amherst"
version = "0.4.100"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paw", email = "amherst+pawrequest@users.noreply.github.com" }
]
requires-python = ">= 3.13"

dependencies = [
    "amherst-core>=0.0.2",
    "shipaw>=0.4.1",
    "pawlogger>=0.1.3",
    "pycommence>=0.3.0",
    #
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "flaskwebgui>=1.1.6",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
graph = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
]


[project.scripts]
shipper = "amherst.cli:shipper_cli"
nice = "amherst.cli:nice_cli"

[tool.ruff]
line-length = 120
lint.extend-select = ["RUF100", "UP", "I"]
format.quote-style = "single"


[tool.uv.sources]
#shipaw = { path = '../shipaw', editable = true }
shipaw = { git = 'https://github.com/pawrequest/shipaw', tag = 'v4' }
pycommence = { git = 'https://github.com/pawrequest/pycommence', tag = 'v3' }
#amherst-core = { path = '../amherst-core', editable = true }
amherst-core = { git = 'https://github.com/pawrequest/amherst-core' }
#amherst-core = { git = 'https://github.com/pawrequest/amherst-core', tag = 'latest' }
